crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_group_wrong_close.snap
---
source: crates/alder-parse/src/item/import.rs
description: "import (json]"
---
Import(
    GroupEnd(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 8,
            },
            boundary: Position {
                line: 1,
                column: 13,
            },
            unexpected: Position {
                line: 1,
                column: 13,
            },
        },
    ),
    1,
    1,
)
