crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_missing_author.snap
---
source: crates/alder-parse/src/item/import.rs
description: import @/http
---
Import(
    Path(
        Author(
            1,
            9,
        ),
        1,
        8,
    ),
    1,
    1,
)
