crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_missing_slash.snap
---
source: crates/alder-parse/src/item/import.rs
description: import @alder
---
Import(
    Path(
        Slash(
            1,
            14,
        ),
        1,
        8,
    ),
    1,
    1,
)
