crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_name.snap
---
source: crates/alder-parse/src/item/import.rs
description: "import @alder/http.{ 1 }"
---
Import(
    Name(
        1,
        22,
    ),
    1,
    1,
)
