crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_names_alias_no_name.snap
---
source: crates/alder-parse/src/item/import.rs
description: "import @alder/http.{ x as }"
---
Import(
    NameAlias(
        1,
        27,
    ),
    1,
    1,
)
