crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_names_end.snap
---
source: crates/alder-parse/src/item/import.rs
description: "import @alder/http.{ get Request }"
---
Import(
    NamesEnd(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 20,
            },
            boundary: Position {
                line: 1,
                column: 25,
            },
            unexpected: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    1,
    1,
)
