crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_names_unclosed.snap
---
source: crates/alder-parse/src/item/import.rs
description: "import @alder/http.{ get,"
---
Import(
    Name(
        1,
        26,
    ),
    1,
    1,
)
