crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_pub_needs_names_alias.snap
---
source: crates/alder-parse/src/item/import.rs
description: pub import @alder/http as h
---
Import(
    PubNeedsNames(
        1,
        24,
    ),
    1,
    5,
)
