crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_pub_needs_names_alias_next_line.snap
---
source: crates/alder-parse/src/item/import.rs
description: "pub import @alder/http\n    as h\n"
---
Import(
    PubNeedsNames(
        2,
        5,
    ),
    1,
    5,
)
